updates per feedback

--- a/modules/client-configuration/pages/clients-ubuntu.adoc
+++ b/modules/client-configuration/pages/clients-ubuntu.adoc
@@ -128,23 +128,20 @@ You will not be supported if your system becomes inoperable by using these tools
 . At the command prompt on the {productname} Server, as root, install the [systemitem]``spacewalk-utils`` package:
 +
 ----
-sudo zypper in spacewalk-utils
+zypper in spacewalk-utils
 ----
 . Add the {ubuntu} channels.
 Adjust the version of the channel names to match your {ubuntu} version:
 +
 ----
-sudo spacewalk-common-channels ubuntu-1804-amd64
+spacewalk-common-channels ubuntu-1804-amd64-main \
+ubuntu-1804-amd64-security \
+ubuntu-1804-amd64-updates
 ----
 . Synchronize the new custom channels.
 
-[IMPORTANT]
-====
-You need all the new channels fully synchronized, including ``Universe``, before you can bootstrap an {ubuntu} client.
-The Universe channel contains important dependencies for Salt.
-====
-
 endif::[]
+
 
 
 ifeval::[{uyuni-content} == true]
@@ -156,15 +153,18 @@ ifeval::[{uyuni-content} == true]
 . At the command prompt on the {productname} Server, as root, install the [systemitem]``spacewalk-utils`` package:
 +
 ----
-sudo zypper in spacewalk-utils
+zypper in spacewalk-utils
 ----
 . Add the {ubuntu} channels.
 Adjust the version of the channel names to match your {ubuntu} version:
 +
 ----
-sudo spacewalk-common-channels ubuntu-1804-pool-amd64-uyuni ubuntu-1804-amd64-main-uyuni \
-ubuntu-1804-amd64-main-update-uyuni ubuntu-1804-amd64-main-security-uyuni \
-ubuntu-1804-amd64-universe-uyuni ubuntu-1804-amd64-uyuni-client
+spacewalk-common-channels ubuntu-1804-pool-amd64-uyuni \
+ubuntu-1804-amd64-main-uyuni \
+ubuntu-1804-amd64-main-update-uyuni \
+ubuntu-1804-amd64-main-security-uyuni \
+ubuntu-1804-amd64-universe-uyuni \
+ubuntu-1804-amd64-uyuni-client
 ----
 . Synchronize the new custom channels.
 
@@ -190,9 +190,9 @@ This dialog displays a completion bar for each product when they are being synch
 Each child channel will generate its own log during the synchronization progress.
 You will need to check all the base and child channel log files to be sure that the synchronization is complete.
 
+
+
 ifeval::[{uyuni-content} == true]
-
-
 
 == Trust GPG Keys on Clients
 
