Apply suggestions from code review
Co-Authored-By: Lana Brindley <lbrindley@suse.de>

--- a/modules/retail/pages/retail-formulas-intro.adoc
+++ b/modules/retail/pages/retail-formulas-intro.adoc
@@ -29,7 +29,7 @@ For more information, see xref:salt:formula-imagesync.adoc[].
 
 [IMPORTANT]
 ====
-It is very easy to misconfigure formulas that may result in branch not working properly.
+Badly configured formulas can result in the branch server failing to work as expected.
 Due to the generic nature of formulas it is difficult to do overall validation.
 We recommend that you configure the branch server using the {smr} command line utilities, and use individual formula settings for further tuning if required.
 For more information, see xref:retail:retail-install-setup.adoc[].
