--- a/modules/retail/pages/retail-install-setup.adoc
+++ b/modules/retail/pages/retail-install-setup.adoc
@@ -28,7 +28,10 @@ These templates need to be adapted for specific usecases, for example by includi
 
 [IMPORTANT]
 ====
-POS templates do not describe any system user. Using {suse} provided templates as is will result in system without possibility of user login. Salt management of the system is unaffected, however.
+By default, POS templates do not include a system user. 
+You will not be able to login as a user to a system that has been installed with a {suse} provided template. 
+However you can use Salt to manage clients without a system user.
+You can use Salt to install a system user after the terminal has been deployed.
 ====
 
 === SLES{nbsp}11 SP{nbsp}3 Terminals
