minor cleanup; provide xref

--- a/modules/installation/pages/uyuni-server-setup.adoc
+++ b/modules/installation/pages/uyuni-server-setup.adoc
@@ -10,6 +10,7 @@ This section covers {productname} Server setup, using these procedures:
 
 
 
+[[server-setup-yast]]
 == Set up {productname} with {yast}
 
 This section will guide you through {productname} setup procedures.
@@ -41,8 +42,6 @@ Without this password it will not be possible to set up a {productname} Proxy Se
 
 // image::quickstart-mgr-setup4-ncurses.png[scaledwidth=80%]
 
-+
-// To be verified
 . From the menu:Uyuni Setup[Database Settings] screen, enter a database user and password and click btn:[Next] to continue.
 Passwords must be at at least seven characters in length, and must not contain spaces, single or double quotation marks (``'`` or ``"``), exclamation marks (``!``), or dollar signs (``$``).
 Always store your passwords in a secure location.
@@ -77,6 +76,7 @@ For security it is recommended that the main administrator creates _low level ad
 
 .Procedure: Setting Up the Main Administration Account
 . In the browser, enter the address provided after completing setup.
+For more information, see xref:uyuni-server-setup.adoc#server-setup-yast[].
 With this address you open the {productname} {webui}.
 
 . In the {webui}, navigate to the menu:Create Organization[Organization Name] field and enter your organization name.
