--- a/modules/installation/pages/install-uyuni.adoc
+++ b/modules/installation/pages/install-uyuni.adoc
@@ -44,7 +44,7 @@ Also consider to create a separate partition for [path]``/srv`` where Kiwi image
 |===
 ////
 
-. Install openSUSE Leap 15.1.
+== Install openSUSE Leap 15.1.
 If you want to re-use an existing openSUSE Leap 15.1 installation make sure that all available package updates are installed.
 
 . Configure a resolvable fully quallified domain name (FQDN) with menu:yast[System > Netwok Settings > Hostname/DNS].
