--- a/modules/installation/pages/install-uyuni.adoc
+++ b/modules/installation/pages/install-uyuni.adoc
@@ -75,4 +75,5 @@ zypper in patterns-uyuni_server
 
 . Reboot.
 
-For proceeding with {productname} setup, see xref:installation:uyuni-server-setup.adoc[Uyuni Setup].
+When this installation is complete, you can continue with {productname} setup.
+For more information, see xref:installation:uyuni-server-setup.adoc[].
