--- a/modules/installation/pages/uyuni-server-setup.adoc
+++ b/modules/installation/pages/uyuni-server-setup.adoc
@@ -149,7 +149,7 @@ After adding the channel, {productname} will schedule the channel to be synchron
 This can take a long time as {productname} will copy channel software sources from the {suse} repositories located at {scc} to local [path]``/var/spacewalk/`` directory of your server.
 
 
-[TIP]
+[NOTE]
 .PostgreSQL and Transparent Huge Pages
 ====
 In some environments, _Transparent Huge Pages_ provided by the kernel may slow down PostgreSQL workloads significantly.
