--- a/modules/installation/pages/uyuni-server-setup.adoc
+++ b/modules/installation/pages/uyuni-server-setup.adoc
@@ -151,7 +151,7 @@ This can take a long time as {productname} will copy channel software sources fr
 
 [NOTE]
 ====
-In some environments, _Transparent Huge Pages_ provided by the kernel may slow down PostgreSQL workloads significantly.
+In some environments, transparent huge pages provided by the kernel can slow down PostgreSQL workloads significantly.
 
 To disable _Transparant Huge Pages_ set the [option]``transparent_hugepage`` kernel parameter to [option]``never``.
 This has to be changed in [path]``/etc/default/grub`` and added to the line [option]``GRUB_CMDLINE_LINUX_DEFAULT``, for example:
