--- a/modules/installation/pages/uyuni-server-setup.adoc
+++ b/modules/installation/pages/uyuni-server-setup.adoc
@@ -154,7 +154,8 @@ This can take a long time as {productname} will copy channel software sources fr
 In some environments, transparent huge pages provided by the kernel can slow down PostgreSQL workloads significantly.
 
 To disable transparent huge pages, set the [parameter]``transparent_hugepage`` kernel parameter to ``never``.
-This has to be changed in [path]``/etc/default/grub`` and added to the line [option]``GRUB_CMDLINE_LINUX_DEFAULT``, for example:
+You will also need to open the [path]``/etc/default/grub`` file and add or edit the line [option]``GRUB_CMDLINE_LINUX_DEFAULT``.
+For example:
 
 ----
 GRUB_CMDLINE_LINUX_DEFAULT="resume=/dev/sda1 splash=silent quiet showopts elevator=noop transparent_hugepage=never"
