--- a/modules/installation/pages/install-uyuni.adoc
+++ b/modules/installation/pages/install-uyuni.adoc
@@ -8,7 +8,7 @@
 This table specifies the minimum requirements.
 ====
 
-In the following table replace _version_ with the actual product version string.
+In this table, replace ``version`` with the version of the product you are using.
 
 [cols="1,1", options="header"]
 .Hardware and Software Requirements
