--- a/modules/installation/pages/server-setup.adoc
+++ b/modules/installation/pages/server-setup.adoc
@@ -24,7 +24,7 @@ As part of providing product support, SUSE reserves the right to ask to remove a
 This section will guide you through {productname} setup procedures.
 
 .Procedure: {productname} Setup
-. Log in to the {productname} Server and type [command]``yast2 susemanager_setup`` to begin the setup.
+. On the {productname} Server, at the command line, use the [command]``yast2 susemanager_setup`` command to begin setup.
 
 . From the introduction screen select menu:SUSE Manager Setup[Setup SUSE Manager from scratch] and click btn:[Next] to continue.
 
