--- a/modules/installation/pages/uyuni-server-setup.adoc
+++ b/modules/installation/pages/uyuni-server-setup.adoc
@@ -33,7 +33,7 @@ Always store your passwords in a secure location.
 
 [IMPORTANT]
 ====
-Without this password it will not be possible to set up a {productname} Proxy Server.
+You must have the certificate password to set up a {productname} Proxy Server.
 ====
 
 . Click btn:[Next] to continue.
