--- a/modules/installation/pages/uyuni-server-setup.adoc
+++ b/modules/installation/pages/uyuni-server-setup.adoc
@@ -60,7 +60,7 @@ You will see the address of the {productname} {webui}.
 // In the next section you will create the administrator's account and synchronize with {scc}.
 
 
-== Creating the Main Administration Account
+== Create the Main Administration Account
 
 This section will walk you through creating your organization's main administration account for {productname}.
 
