--- a/modules/installation/pages/uyuni-server-setup.adoc
+++ b/modules/installation/pages/uyuni-server-setup.adoc
@@ -62,7 +62,7 @@ You will see the address of the {productname} {webui}.
 
 == Create the Main Administration Account
 
-This section will walk you through creating your organization's main administration account for {productname}.
+This section covers how to create your organization's main administration account for {productname}.
 
 [WARNING]
 .Admin and User Accounts
