--- a/modules/installation/pages/uyuni-server-setup.adoc
+++ b/modules/installation/pages/uyuni-server-setup.adoc
@@ -66,7 +66,8 @@ This section covers how to create your organization's main administration accoun
 
 [WARNING]
 ====
-The main administration account is the _highest authority account_ within {productname} and therefore account access information should be stored in a secure location.
+The main administration account has the highest authority within {productname}.
+Ensure you keep access information for this account secure.
 
 For security it is recommended that the main administrator creates _low level admin accounts_ designated for administration of organizations and individual groups.
 ====
