--- a/modules/installation/pages/uyuni-server-setup.adoc
+++ b/modules/installation/pages/uyuni-server-setup.adoc
@@ -69,7 +69,8 @@ This section covers how to create your organization's main administration accoun
 The main administration account has the highest authority within {productname}.
 Ensure you keep access information for this account secure.
 
-For security it is recommended that the main administrator creates _low level admin accounts_ designated for administration of organizations and individual groups.
+We recommend that you create lower level administration accounts for organizations and groups.
+Do not share the main administration access details.
 ====
 
 
