--- a/modules/installation/pages/uyuni-server-setup.adoc
+++ b/modules/installation/pages/uyuni-server-setup.adoc
@@ -75,7 +75,9 @@ Do not share the main administration access details.
 
 
 .Procedure: Setting Up the Main Administration Account
-. In the browser, enter the address provided after completing setup.
+
+. In your web browser, enter the address for the {productname} {webui}.
+This address was provided after you completed setup.
 For more information, see xref:uyuni-server-setup.adoc#server-setup-yast[].
 With this address you open the {productname} {webui}.
 
