--- a/modules/installation/pages/uyuni-server-setup.adoc
+++ b/modules/installation/pages/uyuni-server-setup.adoc
@@ -80,7 +80,7 @@ Do not share the main administration access details.
 This address was provided after you completed setup.
 For more information, see xref:uyuni-server-setup.adoc#server-setup-yast[].
 
-. In the {webui}, navigate to the menu:Create Organization[Organization Name] field and enter your organization name.
+. Log in to the {webui}, navigate to the menu:Create Organization[Organization Name] field, and enter your organization name.
 
 . In the menu:Create Organization[Desired Login] and menu:Create Organization[Desired Password] fields, enter your username and password.
 
