--- a/modules/installation/pages/uyuni-server-setup.adoc
+++ b/modules/installation/pages/uyuni-server-setup.adoc
@@ -91,7 +91,7 @@ For more information, see xref:uyuni-server-setup.adoc#server-setup-yast[].
 
 // image::quickstart-mgr-setup-admin1.png[scaledwidth=80%]
 
-You are now presented with the {productname} menu:Home[Overview] page.
+When you have completed the {productname} {webui} setup, you are taken to the menu:Home[Overview] page.
 // In the next section you will prepare the server for connecting the first client.
 
 
