--- a/modules/installation/pages/uyuni-server-setup.adoc
+++ b/modules/installation/pages/uyuni-server-setup.adoc
@@ -99,7 +99,7 @@ When you have completed the {productname} {webui} setup, you are taken to the me
 
 {scc} (SCC) maintains a collection of repositories which contain packages, software and updates for all supported enterprise client systems.
 These repositories are organized into channels each of which provide software specific to a distribution, release, and architecture.
-After synchronizing with SCC clients may receive updates, and be organized into groups and assigned to specific product software channels.
+After synchronizing with SCC, clients can receive updates, be organized into groups, and assigned to specific product software channels.
 
 This section covers synchronizing with SCC from the {webui} and adding your first client channel.
 
