--- a/modules/installation/pages/uyuni-server-setup.adoc
+++ b/modules/installation/pages/uyuni-server-setup.adoc
@@ -109,7 +109,7 @@ For Uyuni, synchronizing products from {scc} is optional.
 ====
 
 Before you can synchronize software repositories with SCC, you will need to enter organization credentials in {productname}.
-In previous versions, so-called mirror credentials were used instead.
+In previous versions, mirror credentials were used instead.
 The organization credentials give you access to the SUSE product downloads.
 You will find your organization credentials in https://scc.suse.com/organization.
 
