--- a/modules/administration/pages/space-management.adoc
+++ b/modules/administration/pages/space-management.adoc
@@ -24,7 +24,7 @@ You can specify multiple directories by separating them with a space.
 For example:
 
 ----
-spacecheck_dirs = /var/lib/pgsql var/spacewalk /var/cache /srv
+spacecheck_dirs = /var/lib/pgsql /var/spacewalk /var/cache /srv
 ----
 
 
