--- a/modules/installation/pages/uyuni-server-setup.adoc
+++ b/modules/installation/pages/uyuni-server-setup.adoc
@@ -118,7 +118,7 @@ Enter your organization credentials in the {productname} {webui}:
 
 [[proc-admin-organization-credentials]]
 .Procedure: Entering Organization Credentials
-. In the {susemgr} {webui}, select menu:Main Menu[Admin > Setup Wizard].
+. In the {susemgr} {webui}, navigate to menu:Main Menu[Admin > Setup Wizard].
 . From the [guimenu]``Setup Wizard`` page select the btn:[Organization Credentials] tab.
 . Click btn:[Add a new credential].
 . In the dialog, enter [guimenu]``Username`` and [guimenu]``Password``, and confirm with btn:[Save].
