--- a/modules/installation/pages/uyuni-server-setup.adoc
+++ b/modules/installation/pages/uyuni-server-setup.adoc
@@ -128,7 +128,7 @@ When the credentials are confirmed with a check-mark icon, proceed with <<proc-q
 
 [[proc-quickstart-first-channel-sync]]
 .Procedure: Synchronizing with {scc}
-. In the {webui}, navigate to menu:Admin[Setup Wizard].
+. In the {productname} {webui}, navigate to menu:Admin[Setup Wizard].
 
 . From the [guimenu]``Setup Wizard`` page select the btn:[SUSE Products] tab.
 Wait a moment for the products list to populate.
