--- a/modules/installation/pages/uyuni-server-setup.adoc
+++ b/modules/installation/pages/uyuni-server-setup.adoc
@@ -123,7 +123,8 @@ Enter your organization credentials in the {productname} {webui}:
 . Click btn:[Add a new credential].
 . In the dialog, enter [guimenu]``Username`` and [guimenu]``Password``, and confirm with btn:[Save].
 
-When the credentials are confirmed with a check-mark icon, proceed with <<proc-quickstart-first-channel-sync>>.
+A check mark icon is shown when the credentials are confirmed.
+When you have successfully entered the new credentials, you can synchronize with {scc}.
 
 
 [[proc-quickstart-first-channel-sync]]
