Apply suggestions from code review
Co-Authored-By: Lana Brindley <lbrindley@suse.de>

--- a/modules/installation/pages/uyuni-server-setup.adoc
+++ b/modules/installation/pages/uyuni-server-setup.adoc
@@ -119,9 +119,9 @@ Enter your organization credentials in the {productname} {webui}:
 [[proc-admin-organization-credentials]]
 .Procedure: Entering Organization Credentials
 . In the {susemgr} {webui}, navigate to menu:Main Menu[Admin > Setup Wizard].
-. From the [guimenu]``Setup Wizard`` page select the btn:[Organization Credentials] tab.
+. In the [guimenu]``Setup Wizard`` page, navigate to the btn:[Organization Credentials] tab.
 . Click btn:[Add a new credential].
-. In the dialog, enter [guimenu]``Username`` and [guimenu]``Password``, and confirm with btn:[Save].
+. Enter a username and password, and click btn:[Save].
 
 A check mark icon is shown when the credentials are confirmed.
 When you have successfully entered the new credentials, you can synchronize with {scc}.
