get rid of superfluous NOTE

--- a/modules/installation/pages/install-uyuni.adoc
+++ b/modules/installation/pages/install-uyuni.adoc
@@ -3,12 +3,8 @@
 
 {productname} Server can be installed on openSUSE.
 
-[NOTE]
-====
-This table specifies the minimum requirements.
-====
-
-In this table, replace ``version`` with the version of the product you are using.
+The following table specifies the minimum requirements.
+// In this table, replace ``version`` with the version of the product you are using.
 
 [cols="1,1", options="header"]
 .Hardware and Software Requirements
