requirements reworked according to feedback
lining up with SUMA layout and numbers (where appropriate)

--- a/modules/installation/pages/install-uyuni.adoc
+++ b/modules/installation/pages/install-uyuni.adoc
@@ -7,18 +7,18 @@ The following table specifies the minimum requirements.
 // In this table, replace ``version`` with the version of the product you are using.
 
 [cols="1,1", options="header"]
-.Hardware and Software Requirements
+.Software and Hardware Requirements
 |===
-| Requirement            | Description
-| openSUSE Leap 15.1     | Clean installation, up-to-date
-| Multi-core CPU         | x86_64
-| 8 GB RAM *) 	         | Sufficient for testing purposes
-| 100 GB Disk Space **)  | Disk space depends on your channel requirements
+| Software and Hardware  | Recommended
+| Operating System:      | openSUSE Leap 15.1: Clean installation, up-to-date
+| CPU:                   | Minimum 4 dedicated 64-bit CPU cores ({x86_64})
+| RAM:                   | _Test Server_ Minimum 8{nbsp}GB
+|                        | _Base Installation_ Minimum 16{nbsp}GB
+|                        | _Production Server_ Minimum 32{nbsp}GB
+| Disk Space:            | Disk space depends on your channel requirements, at least 100 GB
+|                        | 50 GB per SUSE or openSUSE product and 360 GB per Red Hat product
+| Swap space:            | 3{nbsp}GB
 |===
-
-*) 32 GB of RAM recommended for a production environment (16 GB for a base installation).
-
-**) 50 GB per SUSE or openSUSE product and 360 GB per Red Hat product.
 
 
 ////
@@ -40,15 +40,18 @@ Also consider to create a separate partition for [path]``/srv`` where Kiwi image
 |===
 ////
 
-== Install openSUSE Leap 15.1.
-If you want to re-use an existing openSUSE Leap 15.1 installation make sure that all available package updates are installed.
+== Install Uyuni on openSUSE Leap 15.1
+
+.Procedure: Installing openSUSE Leap 15.1 with Uyuni
+
+. As the base system, install openSUSE Leap 15.1 with all available package updates applied.
 
 . Configure a resolvable fully quallified domain name (FQDN) with menu:yast[System > Netwok Settings > Hostname/DNS].
 
 . Add the repository for installing the {productname} Server software as [systemitem]``root``:
 +
 
-// varaible assignment to avoid overloang lines
+// variable assignment to avoid overlong lines
 +
 ----
 repo=repositories/systemsmanagement:/Uyuni:/Stable/images/repo/Uyuni-Server-4.0-POOL-x86_64-Media1/
