--- a/modules/installation/pages/uyuni-install-requirements.adoc
+++ b/modules/installation/pages/uyuni-install-requirements.adoc
@@ -17,3 +17,22 @@ The following table specifies the minimum requirements.
 |                        | 50 GB per SUSE or openSUSE product and 360 GB per Red Hat product
 | Swap space:            | 3{nbsp}GB
 |===
+
+////
+[NOTE]
+====
+Storage size values are the absolute minimum—only suitable for a small test or demo installation.
+Especially [path]``/var/spacewalk/`` may quickly need more space.
+Also consider to create a separate partition for [path]``/srv`` where Kiwi images are stored.
+====
+////
+
+////
+[cols="1,1,1", options="header"]
+|===
+| VirtIO Storage Disks | Name      | Sizing
+| VirtIO Disk 2        | spacewalk | 101{nbsp}GB
+| VirtIO Disk 3        | pgsql     | 50{nbsp}GB
+| VirtIO Disk 4        | swap      | 4{nbsp}GB
+|===
+////
