adjust include statements

--- a/modules/installation/nav-installation-guide.adoc
+++ b/modules/installation/nav-installation-guide.adoc
@@ -4,8 +4,13 @@ ifndef::backend-pdf[]
 * Installation Guide
 ** xref:install-intro.adoc[Introduction]
 ** Requirements
+ifeval::[{suma-content} == true]
 *** xref:general-requirements.adoc[General Requirements]
 *** xref:hardware-requirements.adoc[Hardware Requirements]
+endif::[]
+ifeval::[{uyuni-content} == true]
+*** xref:uyuni-install-requirements.adoc[Requirements]
+endif::[]
 *** xref:network-requirements.adoc[Network Requirements]
 **** xref:ports.adoc[Required Network Ports]
 *** xref:client-requirements.adoc[Supported Clients]
@@ -57,11 +62,17 @@ include::modules/installation/pages/install-intro.adoc[leveloffset=+1]
 
 == Requirements
 
+ifeval::[{suma-content} == true]
 // General Requirements
 include::modules/installation/pages/general-requirements.adoc[leveloffset=+2]
 
 // Hardware Requirements
 include::modules/installation/pages/hardware-requirements.adoc[leveloffset=+2]
+endif::[]
+
+ifeval::[{uyuni-content} == true]
+include::modules/installation/pages/uyuni-install-requirements.adoc[leveloffset=+2]
+endif::[]
 
 // Network Requirements
 include::modules/installation/pages/network-requirements.adoc[leveloffset=+2]
