--- a/modules/reference/pages/admin/cobbler.adoc
+++ b/modules/reference/pages/admin/cobbler.adoc
@@ -1,7 +1,7 @@
 [[s3-sattools-config-cobbler]]
 = Cobbler
 
-On the menu:Manager Configuration[Cobbler] page you can run the Cobbler synchronization by clicking btn:[Update].
+On the menu:Admin[Manager Configuration > Cobbler] page you can run the Cobbler synchronization by clicking btn:[Update].
 
 image::admin_configuration_cobbler.png[scaledwidth=80%]
 
