--- a/modules/client-configuration/pages/cobbler.adoc
+++ b/modules/client-configuration/pages/cobbler.adoc
@@ -3,6 +3,13 @@
 
 Cobbler is an installation server that allows you to perform unattended system installations.
 It can be used on server, client, or guest systems, and in virtual environments.
+On {productname} Cobbler is installed on the server.
+
+[IMPORTANT]
+====
+{suse} only supports Cobbler functions that are available in the {productname} {webui}, or through the {productname} API.
+All features documented here are supported.
+====
 
 This section explains the Cobbler features most commonly used with {productname}:
 
@@ -13,11 +20,6 @@ This section explains the Cobbler features most commonly used with {productname}
 
 For more detailed Cobbler documentation, see http://cobbler.github.io/manuals/.
 
-[IMPORTANT]
-====
-{suse} only supports Cobbler functions that are available in the {productname} {webui}, or through the {productname} API.
-All features documented here are supported.
-====
 
 [IMPORTANT]
 ====
@@ -31,7 +33,7 @@ If you intend to use your installation with {smr} formulas, do not configure Cob
 // Taken from https://bugzilla.suse.com/show_bug.cgi?id=1141603
 // To be edited!!!
 
-A sync is basically a rebuild of every file cobbler touched. I will try give you an impression with an numbered list.
+A sync is basically a rebuild of every file cobbler touched.
 
 1. Run Pre-Sync-Triggers (this can be any number of shell scripts to my knowledge)
 2. Delete all files and directories which are not allowed in /var/www/cobbler
@@ -53,9 +55,10 @@ A sync is basically a rebuild of every file cobbler touched. I will try give you
 To use Cobbler for system installation with PXE, you will require a TFTP server.
 {productname} installs a TFTP server by default.
 To PXE boot systems, you will require a DHCP server, or have access to a network DHCP server.
+// ke, 2019-11-26: Maybe, we should say that this on SUMA has to be the address of the SUMA server?
 Edit the [path]``/etc/dhcp.conf`` configuration file to change [option]``next-server`` to the hostname or IP address of your Cobbler server.
 
-Cobbler requires an open HTTP port to synchronize data between the Server and the Proxy.
+Cobbler requires an open HTTP port to synchronize data between the server and the proxy.
 By default, Cobbler uses port 80, but you can configure it to use port 443 instead if that suits your environment.
 
 
