cont. with partitioning

--- a/modules/installation/pages/install-proxy.adoc
+++ b/modules/installation/pages/install-proxy.adoc
@@ -38,26 +38,29 @@ This section provides guidance on installation of {productname} Proxy
 utilizing the full installation media with KVM and [command]``virt-manager``.
 This section assumes you have previously setup an account with SCC and downloaded the SLES full installation media.
 
-====>>>> Cont. here !!!!!!!!!!!!!!!!
+
+
 .Procedure: Preparing for SLES Installation
 . In [command]``virt-manager`` select menu:File[New Virtual Machine].
 
 . Select btn:[Local install media (ISO image or CDROM)].
 
-. Ensure btn:[Use ISO Image] is selected then click btn:[Browse] and locate the full SLES image you downloaded from your SCC account.
+. Ensure btn:[Use ISO Image] is selected.
+Then click btn:[Browse] and locate the full SLES image you downloaded from your SCC account.
 
-. Configure your machine with at least 4096 MB RAM and a minimum of 2 CPUs.
+. Configure your machine with at least 2 GB RAM and a minimum of 2 CPUs.
 
-. Create a storage device with a minimum of 234 GB storage space for the installation.
+. Create a storage device with a minimum of 230 GB storage space for the installation.
 During the partitioning setup of the SLES installation this disk should be partitioned into the following disks:
 +
-
+// FIXME: not sure about swap space
+// |4{nbsp}GB Swap space
++
 [cols="1", options="header"]
 |===
 | Disk Space Requirements
-|4{nbsp}GB Swap space
-|130{nbsp}GB XFS partition (or dedicated virtual disk) for [path]``/var/spacewalk/``
-|50{nbsp}GB XFS partition (or dedicated virtual disk) for [path]``/var/lib/pgsql/``
+| 100{nbsp}GB XFS partition (or dedicated virtual disk) for [path]``/srv/``
+| 100{nbsp}GB XFS partition (or dedicated virtual disk) for [path]``/var/cache/``
 |===
 
 . The remaining storage space will be used by the operating system for the root partition.
