--- a/modules/administration/pages/content-lifecycle-examples.adoc
+++ b/modules/administration/pages/content-lifecycle-examples.adoc
@@ -100,7 +100,7 @@ For example, [systemitem]``SUSE-15-2019-1807``.
 
 . Click btn:[Attach/Detach Filters] link, select [guimenu]``Exclude openjdk patch``, and click btn:[Save].
 
-When you rebuild the project with the btn:[Build] button, the new filter is used together with the the [guimenu]``by date`` filter we added before.
+When you rebuild the project with the btn:[Build] button, the new filter is used together with the [guimenu]``by date`` filter we added before.
 
 
 
