--- a/modules/administration/pages/content-lifecycle-examples.adoc
+++ b/modules/administration/pages/content-lifecycle-examples.adoc
@@ -114,7 +114,8 @@ You need to include this new patch into your environment.
 
 [IMPORTANT]
 ====
-The [guimenu]``Allow`` filters rule overrides the exclude function of the [guimenu]``Deny`` filter rule (see xref:administration:content-lifecycle.adoc[Filter ``rule`` Parameter]).
+The [guimenu]``Allow`` filters rule overrides the exclude function of the [guimenu]``Deny`` filter rule.
+For more information, see xref:administration:content-lifecycle.adoc[].
 ====
 
 .Procedure: Including a Patch in a Project
