--- a/modules/client-configuration/pages/cobbler.adoc
+++ b/modules/client-configuration/pages/cobbler.adoc
@@ -71,7 +71,7 @@ Non-unique host names will cause all systems with the same host name to have the
 
 Cobbler configuration is primarily managed using the [path]``/etc/cobbler/settings`` file.
 Cobbler will run with the default settings unchanged.
-All configurable settings are explained in detail in the [path]``/etc/cobbler/settings`` file, including information on each setting, and recommendations.
+All configurable settings are explained in detail in the [path]``/etc/cobbler/settings`` file.
 
 // Removed tshooting language not found error, only applies to sles 12 & SUMA 2.1/3: https://www.suse.com/support/kb/doc/?id=7018334 LKB 2018-08-02
 
