remove public-cloud.adoc from PDF as it is excluded from HTML as well

--- a/modules/administration/nav-administration-guide.adoc
+++ b/modules/administration/nav-administration-guide.adoc
@@ -92,7 +92,7 @@ include::modules/administration/pages/live-patching-sles12.adoc[leveloffset=+2]
 include::modules/administration/pages/monitoring.adoc[leveloffset=+1]
 
 // Public Cloud
-include::modules/administration/pages/public-cloud.adoc[leveloffset=+1]
+// include::modules/administration/pages/public-cloud.adoc[leveloffset=+1]
 // include::modules/administration/pages/public-cloud-azure.adoc[leveloffset=+1]
 
 include::modules/administration/pages/disconnected-setup.adoc[leveloffset=+2]
