add info about devel

--- a/modules/installation/pages/install-uyuni.adoc
+++ b/modules/installation/pages/install-uyuni.adoc
@@ -21,7 +21,8 @@ For requirements, see xref:installation:uyuni-install-requirements.adoc[].
 // variable assignment to avoid overlong lines
 +
 ----
-repo=repositories/systemsmanagement:/Uyuni:/Stable/images/repo/Uyuni-Server-4.0-POOL-x86_64-Media1/
+repo=repositories/systemsmanagement:/
+repo=${repo}Uyuni:/Stable/images/repo/Uyuni-Server-4.0-POOL-x86_64-Media1/
 zypper ar https://download.opensuse.org/$repo uyuni-server-stable
 ----
 
@@ -40,6 +41,9 @@ zypper in patterns-uyuni_server
 ----
 
 . Reboot.
+
+* For more information about the stable version of {productname}, see https://www.uyuni-project.org/pages/stable-version.html.
+* For more information about the development version of {productname}, see https://www.uyuni-project.org/pages/devel-version.html.
 
 When this installation is complete, you can continue with {productname} setup.
 For more information, see xref:installation:uyuni-server-setup.adoc[].
