--- a/modules/installation/pages/install-proxy.adoc
+++ b/modules/installation/pages/install-proxy.adoc
@@ -89,11 +89,10 @@ rpm -e --nodeps sles-release
 
 . Register {productname} Proxy with SCC (for example, replace `<productnumber>` with `{productnumber}` and `<architecture>` with `x86_64`):
 +
-// -=-=-=-=-=-=-=-=-=-=-=-=-=- cut here -=-=-=-=-=-=-=-=-=-=-=-=-=-
 
 ----
 SUSEConnect -e<EMAIL_ADDRESS> -r<SUSE_MANAGER_PROXY_CODE> \
-  -p SUSE-Manager-Server/<productnumber>/<architecture>
+  -p sle-module-suse-manager-proxy/<productnumber>/<architecture>
 ----
 
 . Add {productname} repositories:
@@ -101,13 +100,9 @@ SUSEConnect -e<EMAIL_ADDRESS> -r<SUSE_MANAGER_PROXY_CODE> \
 
 ----
 SUSEConnect -p sle-module-basesystem/15.1/x86_64
-SUSEConnect -p sle-module-python2/15.1/x86_64
 SUSEConnect -p sle-module-server-applications/15.1/x86_64
-SUSEConnect -p sle-module-web-scripting/15.1/x86_64
-SUSEConnect -p sle-module-suse-manager-server/<productnumber>/x86_64
 ----
 +
-JeOS is configured to install only required packages.
 To get all features working you should allow to install also recommended packages.
 In `/etc/zypp/zypp.conf` change:
 +
@@ -123,21 +118,13 @@ To:
 solver.onlyRequires = false
 ----
 
-
-[[quickstart3.sec.suma.installation.sles.sumaext]]
-== Selecting the {productname} Extension
-
-. During {sles} installation, you will be presented with the [systemitem]``Extension and Module Selection`` screen.
+. Install the {productname} Proxy pattern:
 +
-[NOTE]
-====
-This screen will not be shown if you have skipped the registration step at the beginning of the installation process.
-Ensure you have registered with {suse} and logged in.
-====
-+
-. Select the {productname} Extension and then click the btn:[Next] button.
 
-. Complete the {sles} installation.
-//TODO Update image its outdated!
+----
+zypper in -t pattern suma_proxy
+----
 
-image::manager-extension.png[scaledwidth=80%]
+. Reboot.
+
+Continue with registering the installed {productname} Proxy as a {productname} client: xref:proxy-registration.adoc[].
