install-proxy is SLES only

--- a/modules/installation/nav-installation-guide.adoc
+++ b/modules/installation/nav-installation-guide.adoc
@@ -19,7 +19,9 @@ endif::[]
 // better disabling for now; needs a complete overhaul
 // 2019-06-04, ke :
 // *** xref:install-server.adoc[Install Server from Packages]
-//*** xref:install-proxy.adoc[Install Proxy from Packages]
+ifeval::[{suma-content} == true]
+*** xref:install-proxy.adoc[Install Proxy from Packages]
+endif::[]
 *** xref:install-ibmz.adoc[Install on IBM Z]
 ** Setting Up
 *** xref:server-setup.adoc[Server Setup]
@@ -80,8 +82,10 @@ include::modules/installation/pages/install-vm.adoc[leveloffset=+2]
 // Install the Server
 include::modules/installation/pages/install-server.adoc[leveloffset=+2]
 
+ifeval::[{suma-content} == true]
 // Install Proxy
-//include::modules/installation/pages/install-proxy.adoc[leveloffset=+2]
+include::modules/installation/pages/install-proxy.adoc[leveloffset=+2]
+endif::[]
 
 // Install on IBM Z
 include::modules/installation/pages/install-ibmz.adoc[leveloffset=+2]
