--- a/modules/installation/nav-installation-guide.adoc
+++ b/modules/installation/nav-installation-guide.adoc
@@ -77,8 +77,10 @@ endif::[]
 // Install the VM
 include::modules/installation/pages/install-vm.adoc[leveloffset=+2]
 
+// better disabling for now; needs a complete overhaul
+// 2019-06-04, 2019-11-27, ke :
 // Install the Server
-include::modules/installation/pages/install-server.adoc[leveloffset=+2]
+// include::modules/installation/pages/install-server.adoc[leveloffset=+2]
 
 // Install Proxy
 //include::modules/installation/pages/install-proxy.adoc[leveloffset=+2]
