--- a/modules/administration/pages/live-patching-channel-setup.adoc
+++ b/modules/administration/pages/live-patching-channel-setup.adoc
@@ -1,7 +1,7 @@
 [[live-patching-channel-setup]]
 = Set up Channels for Live Patching
 
-Every update of the full kernel package would require a reboot.
+A reboot is required every time you update the full kernel package.
 Therefor it is important to not have newer kernels available in the channels assigned to clients which should use Live Patching.
 
 For these clients only the Live Patching channel contains updates of the running kernel.
