--- a/modules/administration/pages/live-patching-channel-setup.adoc
+++ b/modules/administration/pages/live-patching-channel-setup.adoc
@@ -2,7 +2,7 @@
 = Set up Channels for Live Patching
 
 A reboot is required every time you update the full kernel package.
-Therefor it is important to not have newer kernels available in the channels assigned to clients which should use Live Patching.
+Therefore, it is important that clients using live patching do not have newer kernels available in the channels they are assigned to.
 
 For these clients only the Live Patching channel contains updates of the running kernel.
 
