--- a/modules/administration/pages/live-patching-channel-setup.adoc
+++ b/modules/administration/pages/live-patching-channel-setup.adoc
@@ -6,7 +6,7 @@ Therefore, it is important that clients using live patching do not have newer ke
 
 For these clients only the Live Patching channel contains updates of the running kernel.
 
-There are two ways to manage channels for Live Patching:
+There are two ways to manage channels for live patching:
 
 1. Use Content Lifecycle Management to clone the product tree and remove kernel versions newer than the running one. This procedure is explained in the xref:content-lifecycle-examples.adoc#enhance-project-with-livepatching[Content Livecycle Management Examples].
 This is the prefered solution.
