--- a/modules/administration/pages/live-patching-channel-setup.adoc
+++ b/modules/administration/pages/live-patching-channel-setup.adoc
@@ -9,7 +9,7 @@ For these clients only the Live Patching channel contains updates of the running
 There are two ways to manage channels for live patching:
 
 1. Use Content Lifecycle Management to clone the product tree and remove kernel versions newer than the running one. This procedure is explained in the xref:content-lifecycle-examples.adoc#enhance-project-with-livepatching[Content Livecycle Management Examples].
-This is the prefered solution.
+This is the recommended solution.
 
 2. Use `spacewalk-manage-channel-lifecycle` tool. This procedure is more manual and requires commandline tools as well as the Web UI. This procedure is explained below for SLES 15 SP1, but it works similar for SLE12 SP4 or later as well.
 
