--- a/modules/administration/pages/live-patching-channel-setup.adoc
+++ b/modules/administration/pages/live-patching-channel-setup.adoc
@@ -11,7 +11,9 @@ There are two ways to manage channels for live patching:
 1. Use Content Lifecycle Management to clone the product tree and remove kernel versions newer than the running one. This procedure is explained in the xref:content-lifecycle-examples.adoc#enhance-project-with-livepatching[Content Livecycle Management Examples].
 This is the recommended solution.
 
-2. Use `spacewalk-manage-channel-lifecycle` tool. This procedure is more manual and requires commandline tools as well as the Web UI. This procedure is explained below for SLES 15 SP1, but it works similar for SLE12 SP4 or later as well.
+* Use the `spacewalk-manage-channel-lifecycle` tool. 
+This procedure is more manual and requires command line tools as well as the {webui}. 
+This procedure is explained in this section for SLES{nbsp}15 SP1, but it also works for SLE{nbsp}12 SP4 or later.
 
 == Use spacewalk-manage-channel-lifecycle for Live Patching
 
