--- a/modules/administration/pages/live-patching-channel-setup.adoc
+++ b/modules/administration/pages/live-patching-channel-setup.adoc
@@ -18,7 +18,7 @@ This procedure is explained in this section for SLES{nbsp}15 SP1, but it also wo
 == Use spacewalk-manage-channel-lifecycle for Live Patching
 
 Cloned vendor channels should be prefixed by ``dev`` for development, ``testing``, or  ``prod`` for production.
-In this procedure, you will create a ``dev`` cloned channel, and later, you will need to promote the channel to ``testing``.
+In this procedure, you will create a ``dev`` cloned channel and then promote the channel to ``testing``.
 
 .Procedure: Cloning Live Patching Channels
 
