--- a/modules/administration/pages/live-patching-channel-setup.adoc
+++ b/modules/administration/pages/live-patching-channel-setup.adoc
@@ -22,7 +22,7 @@ In this procedure, you will create a ``dev`` cloned channel and then promote the
 
 .Procedure: Cloning Live Patching Channels
 
-. At the command prompt on the client, as `root`, obtain the current package channel tree:
+. At the command prompt on the client, as root, obtain the current package channel tree:
 +
 
 [subs=attributes]
