--- a/modules/administration/pages/live-patching-sles15.adoc
+++ b/modules/administration/pages/live-patching-sles15.adoc
@@ -10,7 +10,7 @@ Before you begin, ensure:
 * Your SLES{nbsp}15 Salt clients are registered with {productname}
 * You have access to the SLES{nbsp}15 channels appropriate for your architecture, including the Live Patching child channel (or channels)
 * The clients are fully synchronized
-* Assign the clients to the cloned channels prepared for Live Patching (explained before)
+* Assign the clients to the cloned channels prepared for live patching
 
 .Procedure: Setting up for Live Patching
 
