use bullet points everywhere

--- a/modules/administration/pages/live-patching-channel-setup.adoc
+++ b/modules/administration/pages/live-patching-channel-setup.adoc
@@ -8,7 +8,8 @@ For these clients only the Live Patching channel contains updates of the running
 
 There are two ways to manage channels for live patching:
 
-1. Use Content Lifecycle Management to clone the product tree and remove kernel versions newer than the running one. This procedure is explained in the xref:content-lifecycle-examples.adoc#enhance-project-with-livepatching[Content Livecycle Management Examples].
+* Use Content Lifecycle Management to clone the product tree and remove kernel versions newer than the running one.
+This procedure is explained in the xref:content-lifecycle-examples.adoc#enhance-project-with-livepatching[Content Livecycle Management Examples].
 This is the recommended solution.
 
 * Use the `spacewalk-manage-channel-lifecycle` tool. 
