--- a/modules/administration/pages/live-patching-channel-setup.adoc
+++ b/modules/administration/pages/live-patching-channel-setup.adoc
@@ -4,7 +4,7 @@
 A reboot is required every time you update the full kernel package.
 Therefore, it is important that clients using live patching do not have newer kernels available in the channels they are assigned to.
 
-For these clients only the Live Patching channel contains updates of the running kernel.
+Clients using live patching have updates for the running kernel in the live patching channels.
 
 There are two ways to manage channels for live patching:
 
