use "change" instead of "prepare"

--- a/modules/installation/pages/install-proxy.adoc
+++ b/modules/installation/pages/install-proxy.adoc
@@ -67,15 +67,17 @@ During the partitioning setup of the SLES installation this disk should be parti
 Select btn:[Finish] to begin the installation.
 
 Installation of {sles} will begin.
-For more information on completing an installation of {sles}, see: https://documentation.suse.com/sles/15-SP1/html/SLES-all/art-sle-installquick.html.
+For more information on completing an installation of {sles}, see https://documentation.suse.com/sles/15-SP1/html/SLES-all/art-sle-installquick.html.
 
 
 
-[[installation-proxy-prep]]
-== Prepare SLES for SUSE Manager Proxy
+[[installation-proxy-sles]]
+== Change SLES for SUSE Manager Proxy
 
-[[proc.jeos.susemgr.prep]]
-.Procedure: Preparing SLES for {productname} Proxy Installation
+
+
+[[proc-installation-proxy-sles]]
+.Procedure: Changing SLES for {productname} Proxy Installation
 
 // Most steps are currently needed because of 4.0 workarounds
 . Log in as `root`.
