--- a/modules/installation/pages/install-proxy.adoc
+++ b/modules/installation/pages/install-proxy.adoc
@@ -89,12 +89,12 @@ For more information on completing an installation of {sles}, see https://docume
 rpm -e --nodeps sles-release
 ----
 
-. Register {productname} Proxy with SCC (for example, replace `<productnumber>` with `{productnumber}` and `<architecture>` with `x86_64`):
+. Register {productname} Proxy with SCC (for example, replace `<productversion>` with `{productnumber}` and `<architecture>` with `x86_64`):
 +
 
 ----
 SUSEConnect -e<EMAIL_ADDRESS> -r<SUSE_MANAGER_PROXY_CODE> \
-  -p sle-module-suse-manager-proxy/<productnumber>/<architecture>
+  -p sle-product-suse-manager-proxy/<productversion>/<architecture>
 ----
 
 . Add {productname} repositories:
