--- a/modules/installation/pages/install-proxy.adoc
+++ b/modules/installation/pages/install-proxy.adoc
@@ -103,6 +103,7 @@ SUSEConnect -e<EMAIL_ADDRESS> -r<SUSE_MANAGER_PROXY_CODE> \
 ----
 SUSEConnect -p sle-module-basesystem/15.1/x86_64
 SUSEConnect -p sle-module-server-applications/15.1/x86_64
+SUSEConnect -p sle-module-suse-manager-proxy/15.1/x86_64
 ----
 +
 To get all features working you should allow to install also recommended packages.
