--- a/modules/installation/pages/install-proxy.adoc
+++ b/modules/installation/pages/install-proxy.adoc
@@ -106,20 +106,15 @@ SUSEConnect -p sle-module-server-applications/15.1/x86_64
 SUSEConnect -p sle-module-suse-manager-proxy/15.1/x86_64
 ----
 +
-To get all features working you should allow to install also recommended packages.
-In `/etc/zypp/zypp.conf` change:
-+
-
-----
-solver.onlyRequires = true
-----
-+
-
-To:
+[NOTE]
+====
+Verify that you allow installing recommended packages.
+Check the settings in `/etc/zypp/zypp.conf`:
 +
 ----
 solver.onlyRequires = false
 ----
+====
 
 . Install the {productname} Proxy pattern:
 +
